[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aha-bullseye"
version = "0.1.0"
description = "AHA 16/17-segment bulls-eye plotting"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["AHA", "bullseye", "cardiac", "plot", "matplotlib"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://github.com/FyrdahlLab/aha-bullseye"
Issues = "https://github.com/FyrdahlLab/aha-bullseye/issues"

[tool.setuptools]
packages = ["bullseye"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
bullseye = ["py.typed"]
